# plugnvg

./: .gitmodules  CMakeLists.txt  Editor.h  EditorConnection.cpp  EditorConnection.h  EditorNode.cpp  EditorNode.h  EditorNodeCanvas.cpp  EditorNodeCanvas.h  EditorNodeIolet.cpp  EditorNodeIolet.h  EditorTopPanel.h  GraphStateUpdater.h  Main.cpp  MainComponent.cpp  MainComponent.h  NVGComponent.h  NVGLasso.h  TestBox.h  Vis.h  main.cpp  readme.md
